; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_maintenanced.c_LockCitusExtension.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_maintenanced.c_LockCitusExtension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidOid = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [6 x i8] c"citus\00", align 1
@ExtensionRelationId = common dso_local global i32 0, align 4
@AccessShareLock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @LockCitusExtension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @LockCitusExtension() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = load i64, i64* @InvalidOid, align 8
  store i64 %4, i64* %2, align 8
  %5 = call i64 @get_extension_oid(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 1)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @InvalidOid, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %21

10:                                               ; preds = %0
  %11 = load i32, i32* @ExtensionRelationId, align 4
  %12 = load i64, i64* %3, align 8
  %13 = load i32, i32* @AccessShareLock, align 4
  %14 = call i32 @LockDatabaseObject(i32 %11, i64 %12, i32 0, i32 %13)
  %15 = call i64 @get_extension_oid(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 1)
  store i64 %15, i64* %2, align 8
  %16 = load i64, i64* %2, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %10
  store i32 0, i32* %1, align 4
  br label %21

20:                                               ; preds = %10
  store i32 1, i32* %1, align 4
  br label %21

21:                                               ; preds = %20, %19, %9
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i64 @get_extension_oid(i8*, i32) #1

declare dso_local i32 @LockDatabaseObject(i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
